[project]
name = "blogforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "langchain>=1.0.8",
    "langchain-core>=1.0.7",
    "langchain-groq>=1.0.1",
    "langchain-openai>=1.0.3",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
